--- a/SoloProject2/styles.css
+++ b/SoloProject2/styles.css
@@ -1,16 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Ubuntu:wght@300;400;500&display=swap');
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   margin-bottom: 10px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 body {
-  font-family: Arial, Helvetica, sans-serif;
   display: flex;
+  min-height: 100vh;
   justify-content: center;
   align-items: center;
   padding: 20px;
   background-color: #fffcf2;
+}
+a {
+  color: 007185;
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
 }
 .container {
   width: 900px;
@@ -39,6 +48,7 @@ img {
 }
 #breadcrumbs {
   font-size: 12px;
+  color: 565959;
 }
 
 
