--- a/Solo Project - Basketball Scoreboard/styles.css
+++ b/Solo Project - Basketball Scoreboard/styles.css
@@ -22,6 +22,10 @@
 }
 
 body {
+    background-image: url("images/backetball-arena.webp");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -37,7 +41,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: var(--scorboard-blue);
+    background-color: rgba(0,0,0,.1);
+    backdrop-filter: blur(35px);
     padding: 20px 15px;
     border-radius: 10px;
 
@@ -73,7 +78,7 @@ body {
     justify-content: center;
     padding: 8px;
     background-color: var(--score-background);
-    color: red;
+    color: rgb(202, 101, 70);
     font-size: 35px;
     width: 100%;
     height: 85px;
