--- a/solo-project-restaurant-ordering-app/styles.css
+++ b/solo-project-restaurant-ordering-app/styles.css
@@ -75,6 +75,11 @@ header {
   padding: 20px;
   margin-bottom: 20px;
 }
+
+#order {
+  padding: 10px;
+}
+
 .order h3 {
   text-align: center;
   font-size: 1.5rem;
@@ -247,4 +252,10 @@ header {
 
 .hidden {
   display: none;
+}
+
+@media screen and (max-width: 768px) {
+  .modal-card {
+    width: 95%;
+  }
 }
