--- a/huddle-landing-page-with-single-introductory-section-master/styles.css
+++ b/huddle-landing-page-with-single-introductory-section-master/styles.css
@@ -1,35 +1,3 @@
-/* # Front-end Style Guide
-
-## Layout
-
-The designs were created to the following widths:
-
-- Mobile: 375px
-- Desktop: 1440px
-
-## Colors
-
-### Primary
-
-- Violet: hsl(257, 40%, 49%)
-- Soft Magenta: hsl(300, 69%, 71%)
-
-
-- Family: [Poppins](https://fonts.google.com/specimen/Poppins)
-- Weights: 400, 600
-
-### Body
-
-- Family: [Open Sans](https://fonts.google.com/specimen/Open+Sans)
-- Weights: 400
-
-## Icons
-
-For the social icons, you can use a font icon library. Some suggestions can be found below:
-
-- [Font Awesome](https://fontawesome.com/)
-- [IcoMoon](https://icomoon.io/)
-- [Ionicons](https://ionicons.com/) */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Smythe&display=swap');
 
 * {
@@ -49,44 +17,45 @@ body {
   color: white;
 }
 .container {
-  padding: 60px;
   max-width: 80%;
   margin: 0 auto;
+  padding: 50px;
+}
+.img-container {
+  max-width: 60%;
 }
 main {
-  margin-top: 150px;
+  margin-top: 75px;
   display: flex;
   gap: 60px;
 }
 main h1 {
-  font-size: 3rem;
+  font-size: 2rem;
 }
 main p {
-  font-size: 1.375rem;
+  font-size: 1rem;
   line-height: 1.5em;
   opacity: 0.8;
 }
 
 button {
-  padding: 20px;
+  padding: 15px;
   color: hsl(257, 40%, 49%);
   font-family: inherit;
-  font-size: 1.375rem;
+  font-size: 0.875rem;
   background-color: white;
-  width: 300px;
+  width: 200px;
+  border: none;
   border-radius: 40px;
+  box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.5);
   cursor: pointer;
   transition: 0.3s;
-  display: block;
-  margin: 0 auto;
 }
 button:hover {
   background-color: hsl(300, 69%, 71%);
   color: white;
 }
-.img-container {
-  width: 60%;
-}
+
 .main-content {
   width: 40%;
   height: 100%;
@@ -107,14 +76,15 @@ button:hover {
 .social-icon {
   color: inherit;
   text-decoration: none;
-  width: 75px;
-  height: 75px;
+  width: 50px;
+  height: 50px;
   border: 1px solid white;
   border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
   transition: 0.3s;
+  margin-top: 100px;
 }
 .social-icon:hover {
   color: hsl(300, 69%, 71%);
@@ -122,30 +92,26 @@ button:hover {
 }
 
 .social-icon i {
-  font-size: 1.75rem;
-}
-footer {
-  position: fixed;
-  bottom: 10px;
-  left: 50%;
-}
-footer a {
-  text-decoration: none;
-  color: #bbb;
   font-size: 1rem;
-  font-weight: 600;
-  cursor: pointer;
 }
+
 @media screen and (max-width: 950px) {
   body {
     background-image: url('./images/bg-mobile.svg');
     background-size: contain;
     background-position: top center;
   }
+  .container {
+    margin: 0;
+    max-width: 100%;
+    padding: 10px;
+  }
   main {
     margin-top: 50px;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+    gap: 0;
   }
   .img-container,
   .main-content {
@@ -153,22 +119,19 @@ footer a {
     text-align: center;
     gap: 30px;
   }
-  main h1 {
-    font-size: 2rem;
+  button {
+    display: block;
+    margin: 0 auto;
   }
   .icons {
     align-self: center;
-    margin-top: 75px;
   }
   .social-icon {
     width: 50px;
     height: 50px;
+    margin: 0;
   }
   .social-icon i {
     font-size: 1rem;
-  }
-  footer {
-    position: static;
-    text-align: center;
   }
 }
