--- a/solo-project-color-generator/styles.css
+++ b/solo-project-color-generator/styles.css
@@ -74,8 +74,8 @@ button {
   form {
     flex-direction: column;
   }
-  #color-picker-label,
-  #color-picker,
+/*   #color-picker-label,
+  #color-picker, */
   select,
   button {
     width: 100%;
