Fixed some of the date time logic as well as the formatting when date time is below 0

--- a/ScrimbaChristmasChallenge/01 - ChristmasCountDown/index.css
+++ b/ScrimbaChristmasChallenge/01 - ChristmasCountDown/index.css
@@ -25,6 +25,7 @@ body {
   color: var(--dark-green);
   background-color: var(--light-green);
   font-family: 'Roboto', sans-serif;
+  overflow: hidden;
 }
 
 .container {
