--- a/solo-project-movie-search/index.css
+++ b/solo-project-movie-search/index.css
@@ -77,6 +77,12 @@ main {
 .search-results {
   height: 100%;
 }
+.error-message {
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translateX(-50%);
+}
 .index-page {
   height: 100%;
   display: flex;
@@ -150,6 +156,9 @@ header a:hover {
   padding: 20px;
   gap: 20px;
 }
+.search-result-card:last-child {
+  border: none;
+}
 
 .img-container {
   width: 150px;
@@ -160,7 +169,7 @@ header a:hover {
 .img-container img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .text-container {
@@ -184,7 +193,6 @@ header a:hover {
 
 .middle-section {
   display: flex;
-  max-width: 45%;
   justify-content: space-between;
   align-items: center;
 }
