--- a/solo-project-movie-search/index.css
+++ b/solo-project-movie-search/index.css
@@ -197,13 +197,40 @@ header a:hover {
   align-items: center;
 }
 
-#add-to-watch-list {
+.btn-watch-list {
   background: none;
   border: none;
   color: white;
   font-size: 1rem;
   cursor: pointer;
   font-weight: 300;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background-color: rgb(46, 45, 45);
+  padding: 20px;
+  border-radius: 8px;
+  text-align: center;
+}
+
+.modal button {
+  padding: 5px 10px;
+  border: none;
+  cursor: pointer;
+  margin-top: 15px;
+  margin-right: 10px;
 }
 
 .hidden {
