fixing image paths

--- a/ScrimbaChristmasChallenge/09 - AI Generated Christmas Card/index.css
+++ b/ScrimbaChristmasChallenge/09 - AI Generated Christmas Card/index.css
@@ -10,7 +10,7 @@ body {
 }
 
 body {
-  background-image: url('/xmas-bg.png');
+  background-image: url('./images/xmas-bg.png');
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
