--- a/ScrimbaChristmasChallenge/09 - AI Generated Christmas Card/assets/index-RVBEy2QI.css
+++ b/ScrimbaChristmasChallenge/09 - AI Generated Christmas Card/assets/index-RVBEy2QI.css
@@ -2,40 +2,35 @@
   --radius: 3px;
   --main-color: #5d3fd3;
 }
-
 html,
 body {
   margin: 0;
   padding: 0;
 }
-
 body {
-  background-image: url('./images/xmas-bg.png');
+  background-image: url(/assets/xmas-bg-IuC2tYDp.png);
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
-  background-color: blue;
+  background-color: #00f;
   display: flex;
   align-items: center;
   justify-content: center;
   color: var(--main-color);
 }
-
 main {
   display: flex;
   box-shadow: 3px 3px 10px 1px #666;
   border-radius: var(--radius);
   position: relative;
 }
-
 section {
   width: 256px;
   height: 256px;
   text-align: center;
-  background-color: white;
+  background-color: #fff;
   padding: 1em;
 }
-
 .right-col {
   border-top-right-radius: var(--radius);
   border-bottom-right-radius: var(--radius);
@@ -43,21 +38,19 @@ section {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-family: 'Courgette';
+  font-family: Courgette;
 }
-
 .left-col {
   border-top-left-radius: var(--radius);
   border-bottom-left-radius: var(--radius);
 }
-
 img {
   border-radius: var(--radius);
   width: 256px;
   cursor: pointer;
 }
-
 dialog {
+  display: block;
   border: none;
   border-radius: var(--radius);
   box-shadow: 3px 3px 10px 1px #666;
@@ -68,20 +61,17 @@ dialog {
   padding: 2em;
   width: 300px;
 }
-
 .form-inner {
   display: flex;
 }
-
 label {
-  font-family: 'Roboto';
+  font-family: Roboto;
   display: block;
   text-align: center;
-  margin: 0 auto 1em auto;
+  margin: 0 auto 1em;
   padding: 0 0.2em;
   font-size: 140%;
 }
-
 textarea {
   resize: none;
   border-right: none;
@@ -93,32 +83,28 @@ textarea {
   width: 100%;
   margin: 0 auto;
 }
-
 button {
   background-color: var(--main-color);
   border: none;
-  color: white;
+  color: #fff;
   border-top-right-radius: var(--radius);
   border-bottom-right-radius: var(--radius);
   padding: 0 0.6em;
   cursor: pointer;
   font-size: 1.5em;
 }
-
 .btn-send {
   width: 25px;
   display: block;
 }
-
 #modal-close {
   position: absolute;
   top: 20px;
   right: 20px;
   font-size: 1.5rem;
-  font-weight: bold;
+  font-weight: 700;
   cursor: pointer;
 }
-
 .hidden {
   display: none;
 }
