--- a/ScrimbaChristmasChallenge/09 - AI Generated Christmas Card/index.css
+++ b/ScrimbaChristmasChallenge/09 - AI Generated Christmas Card/index.css
@@ -2,35 +2,40 @@
   --radius: 3px;
   --main-color: #5d3fd3;
 }
+
 html,
 body {
   margin: 0;
   padding: 0;
 }
+
 body {
-  background-image: url(/assets/xmas-bg-IuC2tYDp.png);
+  background-image: url('/xmas-bg.png');
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
-  background-color: #00f;
+  background-color: blue;
   display: flex;
   align-items: center;
   justify-content: center;
   color: var(--main-color);
 }
+
 main {
   display: flex;
   box-shadow: 3px 3px 10px 1px #666;
   border-radius: var(--radius);
   position: relative;
 }
+
 section {
   width: 256px;
   height: 256px;
   text-align: center;
-  background-color: #fff;
+  background-color: white;
   padding: 1em;
 }
+
 .right-col {
   border-top-right-radius: var(--radius);
   border-bottom-right-radius: var(--radius);
@@ -38,19 +43,21 @@ section {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-family: Courgette;
+  font-family: 'Courgette';
 }
+
 .left-col {
   border-top-left-radius: var(--radius);
   border-bottom-left-radius: var(--radius);
 }
+
 img {
   border-radius: var(--radius);
   width: 256px;
   cursor: pointer;
 }
-dialog {
-  display: block;
+
+.dialog {
   border: none;
   border-radius: var(--radius);
   box-shadow: 3px 3px 10px 1px #666;
@@ -61,17 +68,20 @@ dialog {
   padding: 2em;
   width: 300px;
 }
+
 .form-inner {
   display: flex;
 }
+
 label {
-  font-family: Roboto;
+  font-family: 'Roboto';
   display: block;
   text-align: center;
-  margin: 0 auto 1em;
+  margin: 0 auto 1em auto;
   padding: 0 0.2em;
   font-size: 140%;
 }
+
 textarea {
   resize: none;
   border-right: none;
@@ -83,28 +93,32 @@ textarea {
   width: 100%;
   margin: 0 auto;
 }
+
 button {
   background-color: var(--main-color);
   border: none;
-  color: #fff;
+  color: white;
   border-top-right-radius: var(--radius);
   border-bottom-right-radius: var(--radius);
   padding: 0 0.6em;
   cursor: pointer;
   font-size: 1.5em;
 }
+
 .btn-send {
   width: 25px;
   display: block;
 }
+
 #modal-close {
   position: absolute;
   top: 20px;
   right: 20px;
   font-size: 1.5rem;
-  font-weight: 700;
+  font-weight: bold;
   cursor: pointer;
 }
+
 .hidden {
   display: none;
 }
