--- a/ScrimbaChristmasChallenge/10 - Rockin Around/index.css
+++ b/ScrimbaChristmasChallenge/10 - Rockin Around/index.css
@@ -1,45 +1,46 @@
-html, body {
-    margin: 0;
-    padding: 0;
+html,
+body {
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    background-color: #0F0F0F;
-    font-family: 'Inter', sans-serif;
+  background-color: #0f0f0f;
+  font-family: 'Inter', sans-serif;
 }
 
 h1 {
-    font-size: 25px;
-    color: #DEEAEE;
-    text-align: center;
+  font-size: 25px;
+  color: #deeaee;
+  text-align: center;
 }
 
 .container {
-    max-width: 320px;
-    margin: 0 auto;
+  max-width: 320px;
+  margin: 0 auto;
 }
 
 #player {
-  background-color: #DEEAEE;
+  background-color: #deeaee;
 }
 
 button {
-    font-family: 'Inter', sans-serif;
-    background-color: #BDD59B;
-    border: 0;
-    border-radius: 5px;
-    font-size: 18px;
-    padding: 10px 0;
+  font-family: 'Inter', sans-serif;
+  background-color: #bdd59b;
+  border: 0;
+  border-radius: 5px;
+  font-size: 18px;
+  padding: 10px 0;
 }
 
 button:hover {
-    background-color: #FF9492;
-    cursor: pointer;
+  background-color: #ff9492;
+  cursor: pointer;
 }
 
 .songs {
-    display: flex;
-    flex-direction: column;
-    row-gap: 10px;
-    margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+  margin-top: 10px;
 }
